# adventofcode2022

./: pyproject.toml
1/: solution1.py
2/: solution2.py
